[package]
name = "arena-box"
version = "0.1.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
description = "A Rust smart pointer that allocates memory in a self-managed arena."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiltonVolpato/arena-box"
homepage = "https://github.com/NiltonVolpato/arena-box"
keywords = ["arena", "smart-pointer", "embedded", "no_std"]
categories = ["development-tools"]

[dependencies]
bumpalo = "3.19.0"

[dev-dependencies.bumpalo]
version = "3.19.0"
features = ["collections"]
