[package]
name = "arena-box"
version = "0.2.1"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
description = "A Rust smart pointer that allocates memory in a self-managed arena."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiltonVolpato/arena-box"
homepage = "https://github.com/NiltonVolpato/arena-box"
keywords = ["arena", "smart-pointer", "embedded", "no_std"]
categories = ["development-tools"]

[dependencies]
bumpalo = "3.19.0"

[dev-dependencies.bumpalo]
version = "3.19.0"
features = ["collections"]

[package.metadata.release]
# Automatically update CHANGELOG.md
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate\n\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/NiltonVolpato/arena-box/compare/{{tag_name}}...HEAD", exactly=1},
]
